[package]
name = "rust-gpu-builder"
version = "0.4.0"
edition = "2021"
build = false

[dependencies]
spirv-builder = "0.6.0"
ctrlc = "3.2.5"
notify = "5.1.0"

futures-lite = "1.12.0"
async-executor = "1.5.0"
async-channel = "1.8.0"
easy-parallel = "3.2.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.1.6", features = ["derive"] }
